# card_game_server

./: CMakeLists.txt
pch/: pch.h
src/: game_server.c  game_server.h  main.c  myerror.h  player.c  player.h
